{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 48,
  "lineage": "4b797f95-d885-3651-d9a1-799d03fcaac5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "tf_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423034607203:network-acl/acl-0cb6b48ea877bfb79",
            "default_network_acl_id": "acl-0cb6b48ea877bfb79",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0cb6b48ea877bfb79",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "423034607203",
            "subnet_ids": [],
            "tags": {},
            "vpc_id": "vpc-05a04af55d708649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02201b422b79b82c5",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-1-96-210.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.96.210",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.Public_Subnet_RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.tf_subnet1",
            "aws_subnet.tf_subnet2",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4a70bd98c6d6441",
            "arn": "arn:aws:ec2:ap-south-1:423034607203:instance/i-0ffbd35a64b1c87fc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ffbd35a64b1c87fc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginxPY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5095b2ab46175f8",
            "private_dns": "ip-10-4-0-26.ap-south-1.compute.internal",
            "private_ip": "10.4.0.26",
            "public_ip": "15.207.106.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db1509298d2781cb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c1fe27cc066171d3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050ec2e24affe6e84",
            "tags": {
              "Name": "Terraform_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c1fe27cc066171d3"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_security_gp",
            "aws_subnet.tf_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423034607203:internet-gateway/igw-08f6e65ae60d665f6",
            "id": "igw-08f6e65ae60d665f6",
            "owner_id": "423034607203",
            "tags": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-05a04af55d708649a"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GATEWAY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02201b422b79b82c5",
            "id": "nat-0d87c0da1609c0630",
            "network_interface_id": "eni-0b99820194e6cb67c",
            "private_ip": "10.4.0.92",
            "public_ip": "65.1.96.210",
            "subnet_id": "subnet-050ec2e24affe6e84",
            "tags": {
              "Name": "Nat-Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_ip",
            "aws_internet_gateway.gw",
            "aws_route_table.Public_Subnet_RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.tf_subnet1",
            "aws_subnet.tf_subnet2",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT_Gateway_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00ce0779b29210d56",
            "owner_id": "423034607203",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d87c0da1609c0630",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route-Table- NAT Gateway"
            },
            "vpc_id": "vpc-05a04af55d708649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.Public_Subnet_RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.tf_subnet1",
            "aws_subnet.tf_subnet2",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Subnet_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f4243686322d7a5e",
            "owner_id": "423034607203",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f6e65ae60d665f6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Internet Gateway-RT"
            },
            "vpc_id": "vpc-05a04af55d708649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat_Gateway_RT_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fea6450f07899404",
            "route_table_id": "rtb-00ce0779b29210d56",
            "subnet_id": "subnet-0e2b14e4524bd42b2"
          },
          "dependencies": [
            "aws_eip.nat_gateway_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.NAT_Gateway_RT",
            "aws_route_table.Public_Subnet_RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.tf_subnet1",
            "aws_subnet.tf_subnet2",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099018581273bf3e7",
            "route_table_id": "rtb-0f4243686322d7a5e",
            "subnet_id": "subnet-050ec2e24affe6e84"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.Public_Subnet_RT",
            "aws_subnet.tf_subnet1",
            "aws_subnet.tf_subnet2",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_gp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423034607203:security-group/sg-0c1fe27cc066171d3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1fe27cc066171d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210208140441752700000001",
            "name_prefix": "terraform-",
            "owner_id": "423034607203",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-05a04af55d708649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423034607203:subnet/subnet-050ec2e24affe6e84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.4.0.0/25",
            "id": "subnet-050ec2e24affe6e84",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423034607203",
            "tags": {
              "Name": "Terraform_subnet1"
            },
            "vpc_id": "vpc-05a04af55d708649a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423034607203:subnet/subnet-0e2b14e4524bd42b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.4.0.128/25",
            "id": "subnet-0e2b14e4524bd42b2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423034607203",
            "tags": {
              "Name": "Terraform_subnet2"
            },
            "vpc_id": "vpc-05a04af55d708649a"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423034607203:vpc/vpc-05a04af55d708649a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-0cb6b48ea877bfb79",
            "default_route_table_id": "rtb-0945ff42885bd421f",
            "default_security_group_id": "sg-02a6a786496b7e76e",
            "dhcp_options_id": "dopt-a9d302c2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05a04af55d708649a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0945ff42885bd421f",
            "owner_id": "423034607203",
            "tags": {
              "Name": "Terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}